--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
 loaderVersion="[39,)"
-license="Apache License 2.0"
+license="MIT"
 issueTrackerURL="https://github.com/CthulhuTheMad/Habirance/issues"
 [[mods]]
 modId="habirance"
